# egui_inspect

egui_example/: Cargo.toml
egui_example/src/: main.rs
egui_inspect/: Cargo.toml
egui_inspect/src/: base_type_inspect.rs  lib.rs
egui_inspect_derive/src/: lib.rs  utils.rs
